tests/paczka1/small_fuzzy/33649296.err
Error in line 1: S542 S322 64,6
Error in line 6: QYp2DtP3oQq S117 68,4
Error in line 12: QYp2DtP3oQq 323 127,9
Error in line 7: QYp2DtP3oQq A323 48,8
